--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,10 +21,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".SignedInActivity">
-
-        </activity>
-
+        <activity android:name=".SignedInActivity"></activity>
+        <activity android:name=".UserInformationActivity"></activity>
     </application>
 
 </manifest>
