Profile Settings Added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,13 @@
             </intent-filter>
         </activity>
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".SignedInActivity"></activity>
-        <activity android:name=".UserInformationActivity"></activity>
+        <activity android:name=".SignedInActivity" />
+        <activity android:name=".UserInformationActivity" />
+        <activity
+            android:name=".ChatActivity"
+            android:label="@string/title_activity_chat"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ProfileSettingsActivity"></activity>
     </application>
 
 </manifest>
