--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:design:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -35,5 +36,7 @@ dependencies {
     implementation 'com.github.florent37:longshadow:1.0.1'
     // Slidder
     implementation 'com.xw.repo:bubbleseekbar:3.19-lite'
+    implementation 'com.google.firebase:firebase-storage:16.0.5'
+
 }
 apply plugin: 'com.google.gms.google-services'
