Permissions + PhotoSelection Added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,6 @@ dependencies {
     implementation 'com.xw.repo:bubbleseekbar:3.19-lite'
     implementation 'com.google.firebase:firebase-storage:16.0.5'
 
+    implementation 'com.google.firebase:firebase-database:16.0.5'
 }
 apply plugin: 'com.google.gms.google-services'
